--- a/index.html
+++ b/index.html
@@ -10,4 +10,7 @@
         <div class="principal">
             <h1>Sobre a Barbearia Alura</h1>
 
-            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o marcado o que há da melhor 
+            <p>Localizada no coração da cidade a <strong>Barbearia Alura</strong> traz para o marcado o que há de melhor para o seu cabelo e barba. Fundada em 2019, a Barbearia Alura já é destaque na cidade e conquista novos clientes a cada dia.</p>
+
+            <p id="missao"><em>Nossa missão é:<strong>"Proporcionar auto-estima e qualidade de vida aos clientes"<
+         
